egonlang-core/res/examples/valid/block_mixed_returns_expr.eg
{
    123;
    "foo";
    {};
    void;
    (1,2,3,);
    [a, b, c];
    0..10;
    if (a > b) { c } else { d }
};