egonlang-core/res/examples/invalid/const_decl_in_grouping_parans.eg
(const a = 123;);

// out: SyntaxError: unexpected "const"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"if\"", "\"true\"", "\"void\"", "\"{\"", "identifier", "number", "string"]